--- a/index.html
+++ b/index.html
@@ -1,14 +1,30 @@
+
+<html>
+
+
+<head>
+
+   <title> Top secret love letter</title>
+
+</head>
+
 <H1>I love you po</H1>
 
 <p>I hope you know how much you mean to me</p>
 
+<head>
 
+<link rel="stylesheet" type= "text/css" href="style.css">
+<meta name="viewport" content= "width=device-width, inital-scale=1">
+
+</head>
 
 
 </body>
 
-<img  src="uwu.png">
 
+<img  src="img/uwu.png" title= "love you Angel">
+<video controls autoplay src= "love2.mp4">
 
 
 </body>
